--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,3 +5,4 @@ $colorBlanco: whitesmoke;
 $colorRojo: rgb(155, 6, 6);
 $colorFondo: rgb(1, 160, 223);
 $menuFijo: fixed;
+$cajaTriple: space-around;
