--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,3 +6,5 @@ $colorRojo: rgb(155, 6, 6);
 $colorFondo: rgb(1, 160, 223);
 $menuFijo: fixed;
 $cajaTriple: space-around;
+$imgSmall: 30px;
+$centrar: center;
