--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,8 +2,11 @@
 $topGenerico: 70px;
 $imgFooter: 40px;
 $colorBlanco: whitesmoke;
-$colorRojo: rgb(155, 6, 6);
-$colorFondo: rgb(1, 160, 223);
+$colorRojo: #E74C3C;
+$colorAmarillo: #FFC300;
+$colorVerde: #58D68D;
+$colorFondo: #D1F2EB;
+$colorCeleste: #5DADE2;
 $menuFijo: fixed;
 $cajaTriple: space-around;
 $imgSmall: 30px;
