--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,7 +3,11 @@
   width: 100%;
   position: $menuFijo;
   backdrop-filter: blur (10px);
-  box-shadow: 0 0 50px rgb(245, 5, 5);
+  box-shadow: 0 0 50px $colorAmarillo;
+  z-index: 1000;
+  &.navegadorBox{
+    padding-left: 2em;
+  }
   &.navegadorMenu {
     justify-content: right;
   }  
@@ -11,7 +15,7 @@
 .tituloPpal{
   width: 100%;
   padding: 1em;
-  background-color: #00b894;
+  background-color: $colorVerde;
   padding-top: 5em;
 }
 .tituloAlineado{
