--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -15,7 +15,7 @@
 .tituloPpal{
   width: 100%;
   padding: 1em;
-  background-color: $colorVerde;
+  background-color: $colorFondo;
   padding-top: 5em;
 }
 .tituloAlineado{
