--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,6 +2,7 @@
 $topGenerico: 70px;
 $imgFooter: 40px;
 $colorBlanco: whitesmoke;
+$colorBasico: #000;
 $colorRojo: #E74C3C;
 $colorAmarillo: #FFC300;
 $colorVerde: #58D68D;
