--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -6,10 +6,6 @@
     padding-bottom: 2em;
     background-color: $colorFondo;
 }
-p img{
-    width: $imgSmall;
-    height: $imgSmall;
-}
 .cajaBtn{
     justify-content: $centrar;
 }
@@ -19,4 +15,53 @@ p img{
 }
 .bordes{
     border:3px solid $colorCeleste ;
+}
+.subtitulos{
+    text-align: center;
+    background-color: $colorFondo;
+    height:2em;
+}
+.cajaX2{
+    display: flex;
+    justify-content: $cajaTriple;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    background-color: $colorFondo;
+}
+.seccion4{
+    display: flex;
+    flex-direction: row;
+
+    & .mapa{
+        width: 60%;
+        height: 300px;
+    }
+
+    & .redSocial{
+        width: 40%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+
+        & .imgRedSocial{
+            width: 40%;
+            text-align: right;
+
+            & .iconos{
+                width: $topGenerico;
+                height: $topGenerico;
+            }
+        }
+
+        & .txtRedSocial{
+            width: 60%;
+            text-align: center;
+            font-size: 1em;
+
+            & a{
+                text-decoration: none;
+                color: $colorBasico;
+            }
+        }
+    }
 }
