--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,7 +3,7 @@
   width: 100%;
   position: $menuFijo;
   backdrop-filter: blur (10px);
-  box-shadow: 0 0 50px $colorAmarillo;
+  // box-shadow: 0 0 50px $colorAmarillo;
   z-index: 1000;
   &.navegadorBox{
     padding-left: 2em;
@@ -15,11 +15,10 @@
 .tituloPpal{
   width: 100%;
   padding: 1em;
-  background-color: $colorFondo;
   padding-top: 5em;
 }
 .tituloAlineado{
-    width: 100%;
-    font-family: 'Biryani';
-    text-align:center;  
-  }
+  width: 100%;
+  font-family: 'Biryani';
+  text-align:center;  
+}
