--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,6 +9,5 @@ $colorVerde: #58D68D;
 $colorFondo: #D1F2EB;
 $colorCeleste: #5DADE2;
 $menuFijo: fixed;
-$cajaTriple: space-around;
 $imgSmall: 30px;
-$centrar: center;
+$centrar: center;centrar: center;
