--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,10 +1,11 @@
 
 .cajaX3{
+    width: 80%;
     display: flex;
-    justify-content: $cajaTriple;
+    justify-content: space-between;
     padding-top: 2em;
     padding-bottom: 2em;
-    background-color: $colorFondo;
+    margin: 0 auto;
 }
 .cajaBtn{
     justify-content: $centrar;
@@ -18,15 +19,16 @@
 }
 .subtitulos{
     text-align: center;
-    background-color: $colorFondo;
-    height:2em;
+    height:3em;
+    justify-content: center;
 }
 .cajaX2{
     display: flex;
-    justify-content: $cajaTriple;
+    width: 80%;
+    justify-content: space-between;
     padding-top: 2em;
     padding-bottom: 2em;
-    background-color: $colorFondo;
+    margin: 0 auto;
 }
 .seccion4{
     display: flex;
@@ -61,6 +63,14 @@
             & a{
                 text-decoration: none;
                 color: $colorBasico;
+            }
+        }
+    }
+}
+}
+}       }
+    }
+}   color: $colorBasico;
             }
         }
     }
