--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,4 +10,4 @@ $colorFondo: #D1F2EB;
 $colorCeleste: #5DADE2;
 $menuFijo: fixed;
 $imgSmall: 30px;
-$centrar: center;centrar: center;
+$centrar: center;
