--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -12,19 +12,20 @@
   }  
 }
 .tituloPpal{
+  position: relative;
   width: 100%;
-  padding: 1em;
   padding-top: 5em;
-  background-color: rgba(125, 129, 129, 0.363);
+  background-color: rgba(189, 239, 248, 0.4);
+  height: 12em;
+  padding-bottom: 2em;
 }
 .tituloAlineado{
   width: 100%;
   font-family: 'Biryani';
   text-align:center;  
-}Alineado{
+}
+.wave{
   width: 100%;
-  font-family: 'Biryani';
-  text-align:center;  
-};  
-} 
+  position: absolute;
+  bottom: 0;
 }
