--- a/scss/_especialistas.scss
+++ b/scss/_especialistas.scss
@@ -1,5 +1,34 @@
 
 .listaDoc{
+    width: 80%;
+    margin: 0 auto;
     display: flex;
     flex-direction: row;
+    margin-bottom: 3em;
+
+    & .list-group{
+        width: 60%;
+    }
+
+    & .imgRedSocial{
+        width: 40%;
+        text-align: center;
+        justify-content: center;
+
+        & img{
+            height: 20em;
+        }
+    }
+}
+.subtitulos2{
+    width: 80%;
+    text-align: left;
+    height:3em;
+    justify-content: center;
+    margin: 0 auto;
+    padding-left: 1em;
+}
+.tablaDr{
+    width: 80%;
+    margin: 0 auto;
 }
