aplicando estilo al carrusel de seccion institucional pestaña

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -139,3 +139,15 @@
 .tablaDr {
   width: 80%;
   margin: 0 auto; }
+
+.cajaCarrusel {
+  width: 80%;
+  margin: 0 auto; }
+  .cajaCarrusel .carruselIndividual {
+    width: 100%;
+    height: 400px; }
+    .cajaCarrusel .carruselIndividual .imgCarrusel {
+      width: 100%;
+      height: 100%;
+      filter: grayscale(100%); }
+ grayscale(100%); }
