--- a/css/estilos.css
+++ b/css/estilos.css
@@ -145,9 +145,9 @@
   margin: 0 auto; }
   .cajaCarrusel .carruselIndividual {
     width: 100%;
-    height: 400px; }
+    height: 600px; }
     .cajaCarrusel .carruselIndividual .imgCarrusel {
       width: 100%;
       height: 100%;
+      object-fit: cover;
       filter: grayscale(100%); }
- grayscale(100%); }
