--- a/scss/_especialistas.scss
+++ b/scss/_especialistas.scss
@@ -38,11 +38,12 @@
     
     & .carruselIndividual{
         width: 100%;
-        height: 80%;
+        height: 600px;
 
         & .imgCarrusel{
             width: 100%;
             height: 100%;
+            object-fit: cover;
             filter: grayscale(100%);
         }
     }
