--- a/scss/_querys.scss
+++ b/scss/_querys.scss
@@ -18,6 +18,10 @@
     padding-top: 0.5em;
   }
 
+  h2{
+    font-size: calc(1.1rem + 0.7vw);
+  }
+
   .cajaX3 {
     display: flex;
     flex-flow: column;
