Acomodar las clases de main.scss ios s los archivos scss tar tablas

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -202,11 +202,4 @@
     .listaDoc__imgRedSocial {
       display: none; }
     .listaDoc__list-group {
-      width: 100%; } 
-}Social .txtRedSocial {
-    display: none; }y: none; }
-        .listaDoc {
-          width: 100%;
-          text-align: center; }
-          .listaDoc .imgRedSocial {
-            display: none; } }
+      width: 100%; } }
