--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -5,14 +5,14 @@
     align-items: center;
     height: 5em; 
     
-    &__boxFooterTxt{
+    &__.boxFooterTxt{
         color: $colorBlanco;
     }
 
-    &__boxFooterImg{
+    &__.boxFooterImg{
         filter: invert(100%);
     
-        &__imgFooter{
+        &__.imgFooter{
             width: $imgFooter;
             height: $imgFooter;
         }
