Acomodar clases de header.scss s.scss  los archivos scss tar tablas

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,11 +4,11 @@
     backdrop-filter: blur (10px);
     z-index: 1000;
 
-    &__navegadorBox {
+    &__.navegadorBox {
         padding-left: 2em;
     }
 
-    &__navegadorMenu {
+    &__.navegadorMenu {
         justify-content: right;
     }
 }
