--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,205 +1,284 @@
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box; }
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
 .dedoClick {
-  width: 30px;
-  height: 30px; }
+    width: 30px;
+    height: 30px;
+}
 
 .fijarMenu {
-  width: 100%;
-  position: fixed;
-  backdrop-filter: blur 10px;
-  z-index: 1000; }
-  .fijarMenu__navegadorBox {
-    padding-left: 2em; }
-  .fijarMenu__navegadorMenu {
-    justify-content: right; }
+    width: 100%;
+    position: fixed;
+    backdrop-filter: blur 10px;
+    z-index: 1000;
+}
+
+.fijarMenu .navegadorBox {
+    padding-left: 2em;
+}
+
+.fijarMenu .navegadorMenu {
+    justify-content: right;
+}
 
 .tituloPpal {
-  position: relative;
-  width: 100%;
-  padding-top: 5em;
-  background-color: rgba(189, 239, 248, 0.4);
-  height: 12em;
-  padding-bottom: 2em; }
+    position: relative;
+    width: 100%;
+    padding-top: 5em;
+    background-color: rgba(189, 239, 248, 0.4);
+    height: 12em;
+    padding-bottom: 2em;
+}
 
 .tituloAlineado {
-  width: 100%;
-  font-family: 'Biryani';
-  text-align: center; }
+    width: 100%;
+    font-family: 'Biryani';
+    text-align: center;
+}
 
 .wave {
-  width: 100%;
-  position: absolute;
-  bottom: 0; }
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
 
 .cajaX3 {
-  width: 80%;
-  display: flex;
-  justify-content: space-between;
-  padding-top: 2em;
-  padding-bottom: 2em;
-  margin: 0 auto; }
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 2em;
+    margin: 0 auto;
+}
 
 .cajaBtn {
-  justify-content: center; }
+    justify-content: center;
+}
 
 .card-img-top {
-  width: 18rem;
-  height: 18rem;
-  object-fit: cover; }
+    width: 18rem;
+    height: 18rem;
+    object-fit: cover;
+}
 
 .bordes {
-  border: 3px solid #5DADE2; }
+    border: 3px solid #5DADE2;
+}
 
 .subtitulos {
-  text-align: center;
-  height: 3em;
-  justify-content: center; }
+    text-align: center;
+    height: 3em;
+    justify-content: center;
+}
 
 .cajaX2 {
-  display: flex;
-  width: 80%;
-  justify-content: space-between;
-  padding-top: 2em;
-  padding-bottom: 2em;
-  margin: 0 auto; }
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+    padding-bottom: 2em;
+    margin: 0 auto;
+}
 
 .seccion4 {
-  display: flex;
-  flex-direction: row;
-  width: 80%;
-  padding-top: 2em;
-  padding-bottom: 2em;
-  margin: 0 auto; }
-  .seccion4__mapa {
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    padding-bottom: 2em;
+    margin: 0 auto;
+}
+
+.seccion4 .mapa {
     width: 60%;
-    height: 300px; }
-  .seccion4__redSocial {
+    height: 300px;
+}
+
+.seccion4 .redSocial {
     width: 40%;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap; }
-    .seccion4__redSocial__imgRedSocial {
-      width: 40%;
-      text-align: center; }
-      .seccion4__redSocial__imgRedSocial__iconos {
-        width: 70px;
-        height: 70px; }
-    .seccion4__redSocial__txtRedSocial {
-      width: 60%;
-      text-align: left;
-      font-size: 1em;
-      padding-top: 1.5rem; }
-      .seccion4__redSocial__txtRedSocial__a {
-        text-decoration: none;
-        color: #000; }
+    flex-wrap: wrap;
+}
 
-.listaDoc {
-  width: 80%;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 3em; }
-  .listaDoc__list-group {
-    width: 60%; }
-  .listaDoc__imgRedSocial {
+.seccion4 .redSocial .imgRedSocial {
     width: 40%;
     text-align: center;
-    justify-content: center; }
-    .listaDoc__imgRedSocial__img {
-      height: 20em; }
+}
+
+.seccion4 .redSocial .imgRedSocial .iconos {
+    width: 70px;
+    height: 70px;
+}
+
+.seccion4 .redSocial .txtRedSocial {
+    width: 60%;
+    text-align: left;
+    font-size: 1em;
+    padding-top: 1.5rem;
+}
+
+.seccion4 .redSocial .txtRedSocial a {
+    text-decoration: none;
+    color: #000;
+}
+
+.listaDoc {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 3em;
+}
+
+.listaDoc .list-group {
+    width: 60%;
+}
+
+.listaDoc .imgRedSocial {
+    width: 40%;
+    text-align: center;
+    justify-content: center;
+}
+
+.listaDoc .imgRedSocial img {
+    height: 20em;
+}
 
 .subtitulos2 {
-  width: 80%;
-  text-align: left;
-  height: 3em;
-  justify-content: center;
-  margin: 0 auto;
-  padding-left: 1em; }
-
-.tablaDr {
-  width: 80%;
-  margin: 0 auto; }
-
-.cajaCarrusel {
-  width: 80%;
-  margin: 0 auto; }
-  .cajaCarrusel__carruselIndividual {
-    width: 100%;
-    height: 600px; }
-    .cajaCarrusel__carruselIndividual__imgCarrusel {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      filter: grayscale(100%); }
-
-.boxFooter {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 5em; }
-  .boxFooter__boxFooterTxt {
-    color: whitesmoke; }
-  .boxFooter__boxFooterImg {
-    filter: invert(100%); }
-    .boxFooter__boxFooterImg__imgFooter {
-      width: 40px;
-      height: 40px; }
-
-@media (max-width: 768px) {
-  .tituloPpal {
-    padding-top: 4em;
-    height: 4em; }
-    .tituloPpal__wave {
-      display: none; }
-      .tituloPpal__wave__svg {
-        display: none; }
-  .subtitulos2 {
-    width: 100%;
-    text-align: center;
-    padding-top: 0.5em; }
-  h2 {
-    font-size: calc(1.1rem + 0.7vw); }
-  .cajaX3 {
-    display: flex;
-    flex-flow: column;
-    width: 100%;
+    width: 80%;
+    text-align: left;
+    height: 3em;
     justify-content: center;
     margin: 0 auto;
-    padding-top: 0px; }
-    .cajaX3__card {
-      width: 100%; }
-  .card-img-top {
-    width: 100%; }
-  .cajaX2 {
-    display: flex;
-    flex-flow: column;
-    width: 100%;
+    padding-left: 1em;
+}
+
+.tablaDr {
+    width: 80%;
     margin: 0 auto;
-    padding-top: 0px; }
-  .seccion4 {
+}
+
+.cajaCarrusel {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.cajaCarrusel .carruselIndividual {
+    width: 100%;
+    height: 600px;
+}
+
+.cajaCarrusel .carruselIndividual .imgCarrusel {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: grayscale(100%);
+}
+
+.boxFooter {
     display: flex;
-    flex-flow: column;
-    width: 100%;
-    margin: 0 auto; }
-    .seccion4__mapa {
-      width: 100%; }
-    .seccion4__redSocial {
-      width: 100%;
-      display: flex;
-      flex-flow: row;
-      align-items: center;
-      padding-top: 1.5em;
-      padding-bottom: 1.5em; }
-      .seccion4__redSocial__txtRedSocial {
-        display: none; }
-  .listaDoc {
-    width: 100%;
-    text-align: center; }
-    .listaDoc__imgRedSocial {
-      display: none; }
-    .listaDoc__list-group {
-      width: 100%; } }
+    justify-content: space-evenly;
+    align-items: center;
+    height: 5em;
+}
+
+.boxFooter .boxFooterTxt {
+    color: whitesmoke;
+}
+
+.boxFooter .boxFooterImg {
+    filter: invert(100%);
+}
+
+.boxFooter .boxFooterImg .imgFooter {
+    width: 40px;
+    height: 40px;
+}
+
+@media (max-width: 768px) {
+    .tituloPpal {
+        padding-top: 4em;
+        height: 4em;
+    }
+
+    .tituloPpal .wave {
+        display: none;
+    }
+
+    .tituloPpal .wave svg {
+        display: none;
+    }
+
+    .subtitulos2 {
+        width: 100%;
+        text-align: center;
+        padding-top: 0.5em;
+    }
+
+    h2 {
+        font-size: calc(1.1rem + 0.7vw);
+    }
+
+    .cajaX3 {
+        display: flex;
+        flex-flow: column;
+        width: 100%;
+        justify-content: center;
+        margin: 0 auto;
+        padding-top: 0px;
+    }
+
+    .cajaX3 .card {
+        width: 100%;
+    }
+
+    .card-img-top {
+        width: 100%;
+    }
+
+    .cajaX2 {
+        display: flex;
+        flex-flow: column;
+        width: 100%;
+        margin: 0 auto;
+        padding-top: 0px;
+    }
+
+    .seccion4 {
+        display: flex;
+        flex-flow: column;
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .seccion4 .mapa {
+        width: 100%;
+    }
+
+    .seccion4 .redSocial {
+        width: 100%;
+        display: flex;
+        flex-flow: row;
+        align-items: center;
+        padding-top: 1.5em;
+        padding-bottom: 1.5em;
+    }
+
+    .seccion4 .redSocial .txtRedSocial {
+        display: none;
+    }
+
+    .listaDoc {
+        width: 100%;
+        text-align: center;
+    }
+
+    .listaDoc .imgRedSocial {
+        display: none;
+    }
+
+    .listaDoc .list-group {
+        width: 100%;
+    }
+}
