--- a/scss/_querys.scss
+++ b/scss/_querys.scss
@@ -3,10 +3,10 @@
         padding-top: 4em;
         height: 4em;
 
-        &__.wave {
+        & .wave {
             display: none;
 
-            &__svg {
+            & svg {
                 display: none;
             }
         }
@@ -30,7 +30,7 @@
         margin: 0 auto;
         padding-top: 0px;
 
-        &__.card {
+        & .card {
             width: 100%;
         }
     }
@@ -53,11 +53,11 @@
         width: 100%;
         margin: 0 auto;
 
-        &__.mapa {
+        & .mapa {
             width: 100%;
         }
 
-        &__.redSocial {
+        & .redSocial {
             width: 100%;
             display: flex;
             flex-flow: row;
@@ -66,7 +66,7 @@
             padding-bottom: 1.5em;
 
 
-            &__.txtRedSocial {
+            & .txtRedSocial {
                 display: none;
             }
         }
@@ -76,11 +76,11 @@
         width: 100%;
         text-align: center;
 
-        &__.imgRedSocial {
+        & .imgRedSocial {
             display: none;
         }
 
-        &__.list-group {
+        & .list-group {
             width: 100%;
         }
     }
