--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,6 +9,18 @@
   height: 30px;
 }
 
+.wappFijo {
+  position: fixed;
+  right: 50px;
+  bottom: 100px;
+  z-index: 100;
+}
+
+.wappFijo img {
+  width: 70px;
+  height: 70px;
+}
+
 .fijarMenu {
   width: 100%;
   position: fixed;
@@ -174,6 +186,10 @@
   filter: grayscale(100%);
 }
 
+#consultoriosCel {
+  display: none;
+}
+
 .boxFooter {
   display: flex;
   justify-content: space-evenly;
@@ -266,5 +282,50 @@
   }
   .tablaDr {
     width: 100%;
+  }
+  .boxFooter {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 5em;
+    width: 100%;
+  }
+  #consultorios {
+    display: none;
+  }
+  #maternidad {
+    display: none;
+  }
+  #consultoriosCel {
+    display: flex;
+    flex-direction: column;
+  }
+  #consultoriosCel h2 {
+    text-align: center;
+    background-color: #0984e3;
+  }
+  #consultoriosCel h3 {
+    font-size: calc(1.1 rem + 0.6 vw);
+    text-align: center;
+    background-color: #ff7675;
+  }
+  #consultoriosCel p {
+    background-color: #81ecec;
+    margin-bottom: 0px;
+  }
+  #consultoriosCel span {
+    margin-bottom: 10px;
+    background-color: #81ecec;
+  }
+  .wappFijo {
+    position: fixed;
+    right: 5px;
+    bottom: 10px;
+    z-index: 100;
+  }
+  .wappFijo img {
+    width: 30px;
+    height: 30px;
   }
 }
