--- a/scss/_querys.scss
+++ b/scss/_querys.scss
@@ -87,4 +87,56 @@
     .tablaDr{
         width: 100%;
     }
+    .boxFooter{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 5em;
+        width: 100%;
+    }
+    #consultorios{
+        display: none;
+    }
+    #maternidad{
+        display: none;
+    }
+    #consultoriosCel{
+        display: flex;
+        flex-direction: column;
+
+        & h2{
+            text-align: center;
+            background-color: #0984e3;
+        }
+
+        & h3{
+            font-size: calc(1.1 rem + 0.6 vw);
+            text-align: center;
+            background-color: #ff7675;
+        }
+
+        & p{
+            background-color: #81ecec;
+            margin-bottom: 0px;
+        }
+
+        & span{
+            margin-bottom: 10px;
+            background-color: #81ecec;
+        }
+    }
+
+    .wappFijo{
+        position: fixed;
+        right: 5px;
+        bottom: 10px;
+        z-index: 100;
+        
+        & img{
+            width: $imgSmall;
+            height: $imgSmall;
+        }
+    }    
 }
+// 
